# rt-detr-rk3588-deploy

./: .gitignore  readme.md
cpp/: CMakeLists.txt
cpp/include/: npu_pipeline.h  postprocess.h  rknn_api.h  rknn_detector.h  types.h
cpp/src/: main.cc  npu_pipeline.cc  postprocess.cc  rknn_detector.cc
python/: convert.py  export.py  infer.py  readme.md
